fixed the section id to make sure the jump to links work, spaced out the contact me images and words, and fixed the spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -62,7 +62,7 @@ header h1{
     width:100%;
     font-size: 1.25rem;
     text-align: left;
-    margin-left: 50px;
+    margin: 50px;
     font-family: 'Kanit', sans-serif;
     word-wrap: wrap;
 }
@@ -78,20 +78,52 @@ header h1{
     border-radius: 80%;
 }
 
-header h3{
+ h3 {
     width:100%;
     font-family: 'Kanit', sans-serif; 
+    margin-bottom: 50px;
+    padding:50px;
 }
 
-.contact info{
-    width: 100%;
-    justify-content: left;
+h4 {
+    font-family: 'Kanit', sans-serif; 
+    font-size: 30px;
+    margin-bottom: 50px;
+    padding:50px;
 }
 
-.github img{
-    width: 80px;
-    height: 80px;
+.contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 50px;
+    gap:100px;
+    width: 120px;
 }
+
+.box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.contact img {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    justify-content: space-between;
+}
+
+.caption {
+    display: block;
+    font-family: 'Lora', serif;
+}
+
+#two {
+    display:flex;
+    flex-direction: row;
+}
+
 
 @media screen and (max-width:900px) {
     .card {
@@ -99,5 +131,6 @@ header h3{
     }
     .img-portfolio{
         flex-wrap: wrap;
+        justify-content: flex-end;
     }
   }
